force-app/main/default/objects/cdcpc__RD_WorkGuidelines_Detail__c/cdcpc__RD_WorkGuidelines_Detail__c.object-meta.xml
<CustomObject>
    <label>RD WorkGuidelinesDetail</label>
    <nameField>
        <label>RD WorkGuidelinesDetail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD WorkGuidelinesDetail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>