force-app/main/default/objects/cdcpc__RD_WorkGuidelines_Detail__c/fields/cdcpc__Guidline_Seq_Numeric__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Guidline_Seq_Numeric__c</fullName>
    <formula>VALUE( cdcpc__Guidline_Seq__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guidline Seq Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>