force-app/main/default/objects/cdcpc__RD_WorkGuidelines_Detail__c/fields/cdcpc__Inspection_Sign_Off_Required__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Inspection_Sign_Off_Required__c</fullName>
    <label>Inspection Sign Off Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>