force-app/main/default/objects/cdcpc__RD_WorkGuidelines_Detail__c/fields/cdcpc__Text__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Text__c</fullName>
    <label>Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>