force-app/main/default/objects/cdcpc__RD_WorkGuidelines_Detail__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Standard_Operation_ID__c</columns>
    <columns>cdcpc__Description__c</columns>
    <columns>cdcpc__Guidline_Seq__c</columns>
    <columns>cdcpc__Operation__c</columns>
    <columns>cdcpc__Text1Val__c</columns>
    <columns>cdcpc__Text__c</columns>
    <columns>cdcpc__Outside_Operation_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>